<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#c8d5d7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <!--Back button-->
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/back_arrow"
            android:contentDescription="@string/back_arrow_description"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="start"
            android:layout_marginBottom="32dp"/>

        <!--Page title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_reservation_title"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="64dp"/>

        <!--Number of people label-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_people_label"
            android:textSize="20sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="8dp"/>

        <!--Number of people dropdown-->
        <Spinner
            android:id="@+id/numberOfPeopleSpinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edittext_background"
            android:padding="16dp"
            android:layout_marginBottom="2dp"/>

        <!--Missing number of people warning-->
        <TextView
            android:id="@+id/peopleWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_of_ppl_warning"
            android:textSize="15sp"
            android:textColor="#c66d6f"
            android:layout_marginBottom="2dp"
            android:visibility="invisible"/>

        <!--Date label-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textSize="20sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="8dp"/>

        <!--Date-->
        <EditText
            android:id="@+id/datePickerButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:inputType="date"
            android:gravity="center"
            android:background="@drawable/edittext_background"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="2dp"/>

        <!--Date warning-->
        <TextView
            android:id="@+id/dateWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_warning"
            android:textSize="15sp"
            android:textColor="#c66d6f"
            android:layout_marginBottom="2dp"
            android:visibility="invisible"/>

        <!--Time label-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:textSize="20sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="8dp"/>

        <!--Time-->
        <EditText
            android:id="@+id/timePickerButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:inputType="time"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@drawable/edittext_background"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="2dp"/>

        <!--Time warning-->
        <TextView
            android:id="@+id/timeWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_warning"
            android:textSize="15sp"
            android:textColor="#c66d6f"
            android:layout_marginBottom="35dp"
            android:visibility="invisible"
            />

        <!--Confirm button-->
        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:text="@string/confirm_btn"
            android:textSize="18sp"
            android:padding="16dp"
            android:textAllCaps="false"
            android:backgroundTint="#e5a975"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>
</ScrollView>