<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FAFAFA">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:gravity="center_horizontal"
        android:background="#c8d5d7">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="80dp">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/app_logo"
                android:contentDescription="@string/app_logo_description"
                android:layout_marginEnd="16dp"
                android:padding="1dp"/>

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/app_name"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-medium"/>

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:textSize="18sp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            android:backgroundTint="#e5a975"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"/>

        <Button
            android:id="@+id/guestAccountButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/guest_signup"
            android:textSize="18sp"
            android:padding="16dp"
            android:layout_marginBottom="32dp"
            android:textAllCaps="false"
            android:backgroundTint="#94b1b6"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/appInfoSection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/app_info"
            android:fontFamily="sans-serif-light"
            android:textSize="14sp"
            android:textColor="#666666"
            android:gravity="center"
            android:padding="24dp"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/staffCreateAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff_signup"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:backgroundTint="#adc1c4"
            android:textColor="#000000"
            android:layout_marginBottom="24dp"/>


    </LinearLayout>
</ScrollView>